# ai-docker-watcher

./: .gitignore  README.md  projects.json  pyproject.toml
src/ai_docker_watcher/: __init__.py  bridge.py  cli.py  config.py  context_store.py  events.py  impact.py  registry.py  router.py  watchers.py
src/ai_docker_watcher/agents/: __init__.py  docker_agent.py  validator_agent.py
tests/: test_context_store.py
