[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-docker-watcher"
version = "0.1.0"
description = "Event-driven sidecar agents for Docker generation and validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-docker-watcher = "ai_docker_watcher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
